--- a/mNet/Info.plist
+++ b/mNet/Info.plist
@@ -47,6 +47,10 @@
 		<string>SanFranciscoDisplay-Bold.otf</string>
 		<string>SanFranciscoDisplay-Black.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
