Added client ID in a--delegate setup and in URL Types in project settings

--- a/mNet/Info.plist
+++ b/mNet/Info.plist
@@ -23,7 +23,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1234567890-abcdefg</string>
+				<string>com.googleusercontent.apps.674788873796-pl2umc4aljof6snj1g3s9q2upircpvjk</string>
 			</array>
 		</dict>
 	</array>
