--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>445162731792-5osvmv4q7j6kdpf1no89lt807ikj2l7a.apps.googleusercontent.com</string>
+	<string>381156695652-q2tpvbjditc32gcdfhnefhpgqvi79bto.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.445162731792-5osvmv4q7j6kdpf1no89lt807ikj2l7a</string>
+	<string>com.googleusercontent.apps.381156695652-q2tpvbjditc32gcdfhnefhpgqvi79bto</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC49ZP2zVssAd2rixgm9ySWsp4t1QjANGE</string>
+	<string>AIzaSyBM-_plRSw0L5W1TUd-XKVe5LSchG9V6F0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>445162731792</string>
+	<string>381156695652</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.mediaware.mNet</string>
 	<key>PROJECT_ID</key>
-	<string>m-net-3f424</string>
+	<string>ios-bi-oriduction</string>
 	<key>STORAGE_BUCKET</key>
-	<string>m-net-3f424.appspot.com</string>
+	<string>ios-bi-oriduction.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:445162731792:ios:1fa4a4dd41e0768c</string>
+	<string>1:381156695652:ios:1fa4a4dd41e0768c</string>
 	<key>DATABASE_URL</key>
-	<string>https://m-net-3f424.firebaseio.com</string>
+	<string>https://ios-bi-oriduction.firebaseio.com</string>
 </dict>
 </plist>
